--- a/popup.html
+++ b/popup.html
@@ -3,8 +3,9 @@
 
 <div class="container">
   <div>
-    <div class="title">Your bookmarks for this video</div>
+    <div class="title">Your Tab Groups</div>
 
-    <div class="bookmarks" id="bookmarks"></div>
+    <div class="bookmarks" id="bookmarks">
+    </div>
   </div>
 </div>
