--- a/popup.html
+++ b/popup.html
@@ -3,8 +3,8 @@
 
 <div class="container">
   <div>
-    <div class="title">Your Tab Groups</div>
-
+    <div class="title">
+      <h2>Your Tab Groups</h2></div>
     <div class="bookmarks" id="bookmarks">
     </div>
   </div>
